feat: Add 'Load More' button at bottom of feed
- Adds a button at the bottom of the Twitter timeline to manually load more content
- Button triggers a scroll to load more tweets via Twitter's infinite scroll
- Includes a toggle in Settings > Display to show/hide the button
- Defaults to visible (ON)

--- a/popup.html
+++ b/popup.html
@@ -851,6 +851,18 @@
 
       <div class="divider"></div>
 
+      <!-- UI Options -->
+      <div class="section" style="margin-bottom: 12px;">
+        <div class="section-title">Display</div>
+        <label class="checkbox-option">
+          <input type="checkbox" id="loadMoreEnabled" checked>
+          <span>Show "Load More" button</span>
+        </label>
+        <div class="hint" style="margin-top: -4px; margin-bottom: 8px; padding-left: 26px; color: #64748b;">Button at bottom of feed to manually load more content</div>
+      </div>
+
+      <div class="divider"></div>
+
       <!-- Cloud Sync -->
       <div class="section" style="margin-bottom: 12px;">
         <div class="section-title">Data Sync</div>
