--- a/popup.html
+++ b/popup.html
@@ -443,6 +443,11 @@
       font-family: monospace;
     }
 
+    textarea.api-key-input {
+      width: 100%;
+      box-sizing: border-box;
+    }
+
     .api-key-input:focus {
       outline: none;
       border-color: #8b5cf6;
